# Proven

./: README.md
proven-backend/: .env.example  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  jest.config.js  package-lock.json  package.json  setup-faucet.sh  tsconfig.json
proven-backend/.github/workflows/: deploy.yml
proven-backend/docs/: backend-api.md
proven-backend/keys/: oracle-signer.json
proven-backend/prisma/: schema.prisma  seed.ts
proven-backend/src/: config.ts  index.ts
proven-frontend/: .env.example  README.md  eslint.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  test-supabase-url.js  tsconfig.json  tsconfig.tsbuildinfo
proven-frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
proven-frontend/components/: ClientNav.tsx  ClientNavWrapper.tsx  NavigationWrapper.tsx  StakeForm.tsx  TailwindButton.tsx  USDCFaucet.tsx  connectwallet.tsx  showbal.tsx
proven-frontend/config/: blockchain.ts
proven-frontend/hooks/: useAuth.ts  useSupabaseAuth.ts
proven-frontend/lib/: supabase.ts
proven-frontend/services/: usdcFaucet.ts
proven-frontend/utils/: anchor.ts  anchor.ts.bak  lockin_stake_idl.json  proven_stake_idl.json  solana.ts  storage.ts
proven-program/: .gitignore  Anchor.toml  Cargo.toml  README.md
proven-program/keys/: oracle-signer.json
proven-program/programs/lockin-stake/: Cargo.toml
proven-program/programs/lockin-stake/src/: lib.rs
proven-program/programs/proven-stake/: Cargo.toml
proven-program/programs/proven-stake/src/: lib.rs
(+172 files in other folders)
